--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: zackbjd/pipeline:latest
+          tags: laurapalmer/pipeline:latest
