--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,12 @@ jobs:
     - name: Push Image to GHCR
       run: docker push ghcr.io/zackbjd/pipeline:latest
 
-    - name: Set up Kubeconfig
+    - name: Set up Minikube
       run: |
-        mkdir -p $HOME/.kube
-        echo "${{ secrets.KUBE_CONFIG }}" > $HOME/.kube/config
-        chmod 600 $HOME/.kube/config
+        curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+        sudo install minikube-linux-amd64 /usr/local/bin/minikube
+        minikube start --driver=docker
+        minikube status
 
     - name: Deploy to Kubernetes
       run: |
